routes/movies/index.module.css
.root {
  background-color: var(--color-surface-dark);
  color: var(--color-text-on-dark);
  width: 100vw;
  height: 100vh;

  overflow-x: hidden;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

.content {
  z-index: 2;
  position: relative;
}

.decos {
  position: fixed;
  inset: 0;
  z-index: 1;
}

.decos img {
  position: absolute;
  inset: 0;
  object-fit: cover;
  object-position: center;
}

.banner {
  width: 100%;

  height: 18rem;
  overflow: hidden;

  position: relative;
  /* display: flex;
  align-items: center;
  justify-content: center; */
  /* background-color: var(--color-surface-dark); */
}

.homeButton {
  position: absolute;
  top: 2rem;
  left: 2rem;

  width: 4rem;
  height: 4rem;

  color: rgba(255, 255, 255, 1); /* half-transparent */
  cursor: pointer;

  /* optional but improves usability */
  transition: opacity 0.2s ease;
  z-index: 12;
}

.homeButton:hover {
  opacity: 0.8; /* simple feedback */
}

.banner h1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 3.75rem;
  margin: 0;
  z-index: 3;
}
.titleBg {
  /* --color-surface-dark: green; */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 7.5rem;
  width: 18rem;
  /* сколько «съедать» с каждого края */
  --edge: 20%;

  /* собственно цвет в центре */
  background: var(--color-surface-dark);

  /* края → центр: прозрачный → var(--color-surface-dark) */
  background: radial-gradient(closest-side, var(--color-surface-dark) 40%, transparent 100%);
}

@media (min-width: 48rem) {
  .banner h1 {
    font-size: 5rem;
  }
  .titleBg {
    height: 10rem;
    width: 22.5rem;
  }
}

@media (min-width: 75rem) {
  .banner h1 {
    font-size: 8rem;
  }
  .titleBg {
    height: 16rem;
    width: 36rem;
  }
  .homeButton {
    position: fixed;
  }
}

.menu {
  margin-top: 2rem;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
}

.menu a {
  /* font-size: 1.25rem;
  width: 9rem; */
  background-color: var(--color-surface-muted);
  text-decoration: none;
  padding: 0.5em 0;
  margin: 0;
  font-weight: bold;
  color: var(--color-text-on-dark);
  text-align: center;
  letter-spacing: 2;
  border-radius: 999px;
  width: 43vw;
  font-size: 6vw;
}

.menu a.active {
  background-color: var(--color-accent);
  color: var(--color-text-on-light);
}

@media (min-width: 48rem) {
  .menu a {
    width: 30vw;
    font-size: 3vw;
  }
}

@media (min-width: 75rem) {
  .menu a {
    width: 24vw;
    /* font-size: 3vw; */
  }
}

.movies {
  margin-top: 3rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 2rem;
}

